// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast rendering renders all messages 1`] = `
<div
  className="Toast"
>
  <TransitionGroup
    childFactory={[Function]}
    className="Toast__messages"
    component="div"
  >
    <CSSTransition
      classNames="swing"
      timeout={
        Object {
          "enter": 500,
          "exit": 300,
        }
      }
    >
      <ToastMessage
        message={
          Object {
            "text": "Test 1",
            "type": "a",
          }
        }
      />
    </CSSTransition>
    <CSSTransition
      classNames="swing"
      timeout={
        Object {
          "enter": 500,
          "exit": 300,
        }
      }
    >
      <ToastMessage
        message={
          Object {
            "text": "Test 2",
            "type": "b",
          }
        }
      />
    </CSSTransition>
  </TransitionGroup>
</div>
`;

exports[`Toast rendering renders modal backdrop when hasFatalError returns true 1`] = `
<div
  className="Toast"
>
  <TransitionGroup
    childFactory={[Function]}
    className="Toast__messages"
    component="div"
  >
    <CSSTransition
      classNames="swing"
      timeout={
        Object {
          "enter": 500,
          "exit": 300,
        }
      }
    >
      <ToastMessage
        message={Object {}}
      />
    </CSSTransition>
  </TransitionGroup>
  <div
    className="Toast__backdrop"
  />
</div>
`;
